compiler/testData/diagnostics/tests/shadowing/ShadowParameterInFunctionBody.jet
fun f(<!UNUSED_PARAMETER!>p<!>: Int): Int {
    val <!NAME_SHADOWING!>p<!> = 2
    return p
}
